# quasar

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Quasar.sln  Quasar.vcxproj  Quasar.vcxproj.filters  README.md  README.rst  appveyor.yml  format_example.json  main.cpp  quasar.cpp  quasar.h  quasar.qrc  quasar.rc  quasar.ui  vcpkg.json  webwidget.cpp  webwidget.h  widgetregistry.cpp
.github/workflows/: auto-approve.yml  build.yml
Resources/: localhost.key  pageglobals.js
Resources/console/: console.html
Resources/console/js/: console.js
Resources/settings/: index.html  settings.html
Resources/settings/css/: settings.css  style.css
Resources/settings/js/: script.js  settings.js
common/: CMakeLists.txt  config.cpp  config.h  exports.h  log.h  settings.cpp  settings.h  util.cpp  util.h
deploy/: quasar.wxs  win_package.ps1  win_package_bin.ps1  wincreateinstall.ps1  windeployqt.ps1  winpackage.ps1  winversion.ps1
deploy/config/: config.xml
docs/: Doxyfile  api.rst  conf.py  console.rst  extensions.rst  extqs.rst  index.rst  launcher.rst  log.rst  plugqs.rst  pulse_viz.rst  settings.rst  usage.rst  userkeys.rst  wcp.rst  wdef.rst  widgetqs.rst  win_audio_viz.rst  win_simple_perf.rst
extension-api/: CMakeLists.txt  dataextension.cpp  dataextension.h  extension-api.vcxproj  extension-api.vcxproj.filters  extension.cpp  extension.h  extension_api.h  extension_exports.h  extension_support.cpp  extension_support.h  extension_support_internal.h  extension_types.h  qstring_hash_impl.h
extension-api/api/: extension_support.h  extension_types.h
extension-api/server/: protocol.h  server.cpp  server.h
extensions/pulse_viz/: CMakeLists.txt  README.rst  pulse_viz.cpp
extensions/win_audio_viz/: CMakeLists.txt  README.rst  cleanup.h  convert.h  win_audio_viz.cpp  win_audio_viz.vcxproj  win_audio_viz.vcxproj.filters
extensions/win_simple_perf/: CMakeLists.txt  README.rst  win_simple_perf.cpp  win_simple_perf.vcxproj
plugin-api/: CMakeLists.txt  dataplugin.cpp  dataplugin.h  plugin-api.vcxproj  plugin-api.vcxproj.filters  plugin_api.h  plugin_support.cpp  plugin_support.h  plugin_support_internal.h  plugin_types.h  qstring_hash_impl.h
plugins/win_audio_viz/: README.rst  win_audio_viz.cpp  win_audio_viz.vcxproj
plugins/win_simple_perf/: win_simple_perf.cpp  win_simple_perf.vcxproj
quasar/: CMakeLists.txt  dataserver.cpp  dataservices.h  main.cpp  preproc.h  quasar.cpp  quasar.h  quasar.qrc  quasar.rc  quasar.ui  quasar.vcxproj  quasar.vcxproj.filters  quasarwidget.cpp  quasarwidget.h  server.cpp  server.h  version.h.in  webuidialog.h  webuihandler.cpp  webuihandler.h  webwidget.cpp  webwidget.h  widget_json.h  widgetdefs.h  widgetmanager.cpp  widgetmanager.h  widgetregistry.cpp  widgetregistry.h
quasar/Resources/: localhost.crt  pageglobals.js
quasar/Resources/settings/js/: settings.js
quasar/api/: extension_api.h  extension_support.h  extension_support.hpp  extension_types.h
quasar/common/: config.cpp  config.h  log.cpp  log.h  qutil.cpp  qutil.h  settings.cpp  settings.h  timer.h  update.cpp  update.h  util.cpp  util.h
quasar/config/: configdialog.cpp  configdialog.h  configdialog.ui  extensionpage.cpp  extensionpage.h  extensionpage.ui  launchereditdialog.cpp  launchereditdialog.h  launchereditdialog.ui
quasar/extension/: extension.cpp  extension.h  extension_support.cpp  extension_support_internal.h
quasar/internal/: ajax.cpp  ajax.h  applauncher.cpp  applauncher.h
quasar/scripts/: quasar.js
quasar/server/: protocol.cpp  protocol.h  server.cpp  server.h
quasar/widgets/: quasarwidget.cpp  quasarwidget.h  widget_json.h  widgetdefinition.cpp  widgetdefinition.h  widgetmanager.cpp  widgetmanager.h
src/: applauncher.cpp  applauncher.h  configdialog.cpp  configdialog.h  configpages.cpp  configpages.h  dataplugin.cpp  dataplugin.h  dataserver.cpp  dataserver.h  dataservices.cpp  dataservices.h  logwindow.cpp  logwindow.h  main.cpp  plugin_api.h  plugin_types.h  preproc.h  quasar.cpp  quasar.h  settingsdialog.cpp  settingsdialog.h  sharedlocker.h  version.h.in  webuidialog.cpp  webuidialog.h  webuihandler.cpp  webuihandler.h  webwidget.cpp  webwidget.h  widgetdefs.h  widgetregistry.cpp  widgetregistry.h
test_plugins/win_simple_perf/: win_simple_perf.cpp  win_simple_perf.vcxproj  win_simple_perf.vcxproj.filters
updater/: CMakeLists.txt  main.cpp
widgets/cdn_weather/: index.html  weather.json
widgets/cdn_weather/css/: style.css
widgets/cdn_weather/js/: index.js
widgets/datetime/: LICENSE  README.md  README.txt  datetime.json  index.html
widgets/datetime/css/: style.css
widgets/datetime/js/: index.js
widgets/sample_app_launcher/: README.md  README.txt  index.html  sample_app_launcher.json
widgets/sample_app_launcher/js/: script.js
widgets/simple_perf/: index.html  simple_perf.json
widgets/simple_perf/css/: style.css
widgets/simple_perf/js/: script.js
widgets/txt_app_launcher/: README.txt  index.html  txt_app_launcher.json
widgets/txt_app_launcher/js/: script.js
widgets/visualizer_css/: README.md  visualizer_css.json
widgets/visualizer_css/css/: style.css
widgets/visualizer_css/js/: index.js  options.js
widgets/visualizer_webgl/: README.md  visualizer_webgl.json
widgets/visualizer_webgl/js/: options.js  script.js
widgets/win_visualizer/: README.md  README.txt  index.html  license.txt  win_visualizer.json
widgets/win_visualizer/css/: style.css
widgets/win_visualizer/js/: index.js  options.js
widgets/win_visualizer_css/: README.md  index.html  win_visualizer_css.json
widgets/win_visualizer_css/js/: index.js  options.js
widgets/win_visualizer_webgl/: README.md  index.html  win_visualizer_webgl.json
widgets/win_visualizer_webgl/js/: options.js  script.js
